app/assets/stylesheets/new-styles.css
/* ... */
/* Top header styles */
#header2 {position:fixed; top:0; height:30px; display: block; width:100%; margin: 0 auto; background:#000; font-size:11px; color:#fff; z-index:2000; /*width:800px;*/}
#top-bar {width:100%; background-color: #252525; background-repeat: repeat-x;
  /* Safari 4-5, Chrome 1-9 */
    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#252525), to(#393939));
  /* Safari 5.1, Chrome 10+ */
    background: -webkit-linear-gradient(top, #252525, #393939);
  /* Firefox 3.6+ */
    background: -moz-linear-gradient(top, #252525, #393939);
  /* IE 10 */
    background: -ms-linear-gradient(top, #252525, #393939);
  /* Opera 11.10+ */
    background: -o-linear-gradient(top, #252525, #393939);
    height: 30px;
    display: block;
}
.subtitle {color: #FFFFFF; float: left; font-family: 'Open Sans',sans-serif; font-size: 14px; font-weight: bold;
    margin: 6px 0 0 1%;}
.top-bar1 {width:980px; height: 95%; margin: 0 auto;}
ul.social-links {float:right; width: auto; padding: 6px 0 0 0; margin: 0;}
ul.social-links li {float:left; margin: 0 6px; border: none; list-style: none;}
ul.social-links li a {vertical-align: middle;}
/* Top header styles */

/* Bootstrap nav */
.navbar .nav > .active > a, .navbar .nav > .active > a:hover, .navbar .nav > .active > a:focus {background-color:#ffffff; box-shadow:none; color:#000;}
.navbar-inner {background-image: none; background-color:transparent; box-shadow: none; border-top: 1px solid #CCCCCC; border-bottom: 1px solid #CCCCCC; border-left: none; border-right:none; border-radius:0; padding-left: 0;}
.navbar .nav > li > a {padding: 3px 15px; font-family: sans-serif; font-size:11px; color: #000000; font-weight: bold; border-right: 1px solid #DDDDDD; text-transform: uppercase;}
.navbar .nav > li:first-child > a {padding-left: 0; cursor: pointer;}

.navbar .nav > li:last-child > a {border-right: none; cursor: pointer;}
.navbar .nav {margin:7px 10px 0 0;}
.navbar .brand {display: none;}
.navbar-form {float:right; position:relative; right:-6%; width:200px;}
.navbar-form input {width:70%; font-size: 12px; color:#000; float:left;}
.navbar-form .btn {}
.btn-subs {position:relative; top:6px; left:5px; border-radius: 4px; -moz-border-radius:4px; -webkit-border-radius:4px; color: #FFFFFF; background-color: #BE1E2D; border-color: #FFFFFF; font-size: 12px; font-weight: bold; border:none; padding:3px 6px; } 
 
.btn-subs:hover, 
.btn-subs:focus, 
.btn-subs:active, 
.btn-subs.active, 
.open .dropdown-toggle.btn-subs {color: #FFFFFF; background-color: #0091FF; border-color: #FFFFFF; } 
 
.btn-subs:active, 
.btn-subs.active, 
.open .dropdown-toggle.btn-subs {background-image: none; } 
 
.btn-subs.disabled, 
.btn-subs[disabled], 
fieldset[disabled] .btn-subs, 
.btn-subs.disabled:hover, 
.btn-subs[disabled]:hover, 
fieldset[disabled] .btn-subs:hover, 
.btn-subs.disabled:focus, 
.btn-subs[disabled]:focus, 
fieldset[disabled] .btn-subs:focus, 
.btn-subs.disabled:active, 
.btn-subs[disabled]:active, 
fieldset[disabled] .btn-subs:active, 
.btn-subs.disabled.active, 
.btn-subs[disabled].active, 
fieldset[disabled] .btn-subs.active {background-color: #1C9BC9; border-color: #FFFFFF;} 
 
.btn-subs .badge { color: #1C9BC9; background-color: #FFFFFF;}
/* Bootstrap nav */

/* Non bootstrap bar */
.non-bs-bar {display:none;}
/* Non bootstrap bar */



menu, ol, ul {padding:0;}
p, pre {margin: 0;}

/* Main Container */
.main-container {margin: 0 auto; width: 975px; height: auto; padding: 1px;}
#blogs-masthead {width: 100%; height: 71px; /*height: 110px;*/margin-bottom: 2px; margin-top: 0; padding-bottom: 10px; position: relative;}
#blogs-masthead .element1 {float: none; height: auto; position: absolute; width: auto; z-index: 1; top:25px;}
#blogs-masthead .element1 #logo a img {}
#logo {display: block;}

#head-rightdiv {float:right; width:20%; height:auto; position: relative; top:37px; right:0; padding:4px; font-family:'CheltenhamLTRegular',georgia,times,serif; font-weight:bold; color:#000000; font-size: 0.8em;}
#head-rightdiv .intro-txt {float: left; line-height: 40px;}
#head-rightdiv .android-icon {float: right; border:0; outline: none;}
/* Main Container */

/* SLideshow page */
ul.picslidebox {float:left; width: 650px; height: auto; margin: 0; padding:0; border-right:1px solid #E2E2E2;}
ul.picslidebox li {float: left; clear: both; margin: 10px 0;  list-style: none;}
div.picleft {float:left; clear:both; margin:10px 0 0 0; padding:0; width:592px; height: 270px;}
div.picright {float: left; font-size: 15px; font-weight: bold; color: #000000; font-family: 'CheltenhamLTRegular',georgia,times,serif;
    font-size: 1.6em; font-weight: bold;}
div.picleft img {max-width: 100%; max-height: 100%;}    
/* SLideshow page */

/* Team page */
ul.team {float:left; width: 650px; margin: 0;}
ul.team li {float: left; clear: both; margin: 5px 0; list-style: none;}
div.teampic {float:left; width:auto; height: auto;}
.fl {float: left;}
div.teamemname {float: right; font-size: 21px; font-weight:bold; margin: 90px 0 0 82px; text-transform: uppercase;}

ul.team-members {float:left; clear:both; width:100%; height:auto; margin:0 0 10px 0; list-style-type:none; font-family: sans-serif;}
ul.team-members li {float:left; width:33%; height:auto; margin:3px 0 3px 0; line-height: 15px; /*margin:3px 7px 3px 30px;*/}
.tm-div {float:left; width: 100%; max-width:136px; height:auto;}
.tm-div .mem-pict {float:left; width:100%; margin:0 0 0 0; border:none;}
.tm-div .orng-box {clear:both; width:100%; height:auto; background-color:#D95578; font-size:0.7em; text-align:center;}
.orng-box .title {text-transform:uppercase; font-weight:bold; padding:5px 0 0 0; color:#FFF; /*padding:9px 0 0 0;*/}
.orng-box .nickname {padding:1px 0 0 0; color:#FFF;}
.orng-box .desig {padding:5px 0 0 0; font-weight:normal; color:#fff;}

.prf-div-pop {margin:14px auto 7px auto; width:90%; height:95%;}
.prf-div-pop .prof-div-lft {float:left; width:140px; height:95%; margin:0; text-align:center;}
/* ... */

